--- a/Experiments/plot/figures/Exp6_read_memory.tex
+++ b/Experiments/plot/figures/Exp6_read_memory.tex
@@ -94,23 +94,23 @@
 		y tick label style={/pgf/number format/1000 sep={}},
 		ymax=128,		
 		scaled y ticks=false,		  
-		enlarge y limits={0.4,upper},		
+		enlarge y limits={0.27,upper},		
 		ylabel={Memory Used [GB]},		   
 		ytick align=inside,
 		xtick align=outside,			
 		xtick pos=left,
 		ytick pos=left,
-		yticklabel style = {font=\scriptsize},
-		ylabel style = {font=\scriptsize, yshift=-12pt},
-		xticklabel style = {font=\scriptsize, rotate=50, anchor=east, xshift=1pt, yshift=-1pt},
+		yticklabel style = {font=\footnotesize},
+		ylabel style = {yshift=-12pt},
+		xticklabel style = {font=\footnotesize, rotate=50, anchor=east, xshift=1pt, yshift=-1pt},
 		x label style={yshift=-20pt},
 		xtick=data,
-		height=0.55\columnwidth,  
+		height=0.7\columnwidth,  
 		symbolic x coords={inPlaceCPP,FlatBufCPP, HandcodedCPP,BoostBinaryCPP, BoostCPP, ProtoBufCPP, BsonCPP, 
 		BincodeRust,FlexBufRust, MessagePackRust,BsonRust, JsonRust, 
 		FlatBufJava,ProtoBufJava,KryoJava,DefaultJava,JsonJava, Json+GzipJava,BsonJava,ByteBufferJava},		   
-		xticklabels={InPlace,FlatBuf,HandCoded,BoostBinary,BoostText,ProtoBuf,Bson, Bincode, FlexBuf,MessagePack,Bson, Json, 
-		FlatBuf,ProtoBuf,Kryo,Default,Json,Json+Gzip,Bson,ByteBuffer},		
+		xticklabels={InPlace,FlatBuf,HandCoded,BoostBinary,BoostText,ProtoBuf,BSON, Bincode, FlexBuf,MessagePack,BSON, JSON, 
+		FlatBuf,ProtoBuf,Kryo,Default,JSON,JSON+Gzip,BSON,ByteBuffer},		
 		point meta=rawy,            
 		nodes near coords={%
     		\pgfmathprintnumberto[fixed,assume math mode=true,precision=1]{\pgfplotspointmeta}{\myval}%
