--- a/Experiments/plot/figures/Exp2_legend_single.tex
+++ b/Experiments/plot/figures/Exp2_legend_single.tex
@@ -5,9 +5,9 @@
     xmax=50,
     ymin=0,
     ymax=0.4, 
-    legend columns=7,
+    legend columns=6,
     legend style={draw=white!15!black,legend cell align=left},
-    legend style={draw=none, nodes={scale=1.2, transform shape,}, font=\large},    
+    legend style={draw=none, nodes={scale=1.2, transform shape,}, font=\LARGE},    
     legend image post style={line width=1.5pt,scale=1.7},
     legend cell align={left},   
     /tikz/every even column/.append style={column sep=3em},
@@ -15,7 +15,7 @@
     \addlegendimage{black,mark=triangle,dotted, line cap=round,mark options={scale=1.2,solid}}
     \addlegendentry{C++ Handcoded};
     \addlegendimage{black,mark=*,dotted, line cap=round,mark options={scale=1.2,solid}}
-    \addlegendentry{C++ inPlace};
+    \addlegendentry{C++ InPlace};
     \addlegendimage{black,mark=o,dotted, line cap=round,mark options={scale=1.2,solid}}
     \addlegendentry{C++ FlatBuf};
     \addlegendimage{black,mark=triangle*,dotted, line cap=round,mark options={scale=1.2,solid}}
@@ -25,10 +25,10 @@
     \addlegendimage{black,mark=diamond*,dotted, line cap=round,mark options={scale=1.2,solid}}
     \addlegendentry{C++ BoostBinary};
     \addlegendimage{black,mark=square*,dotted, line cap=round,mark options={scale=1.2,solid}}
-    \addlegendentry{C++ Bson};
+    \addlegendentry{C++ BSON};
 
     \addlegendimage{blue,mark=o,dotted, line cap=round,mark options={scale=1.2,solid}}
-    \addlegendentry{Rust Json};    
+    \addlegendentry{Rust JSON};    
     \addlegendimage{blue,mark=triangle,dotted, line cap=round,mark options={scale=1.2,solid}}
     \addlegendentry{Rust MessagePack};    
     \addlegendimage{blue,mark=*,dotted, line cap=round,mark options={scale=1.2,solid}}
@@ -36,16 +36,16 @@
     \addlegendimage{blue,mark=triangle*,dotted, line cap=round,mark options={scale=1.2,solid}}
     \addlegendentry{Rust FlexBuf};
     \addlegendimage{blue,mark=square,dotted, line cap=round,mark options={scale=1.2,solid}}
-    \addlegendentry{Rust Bson};
+    \addlegendentry{Rust BSON};
 
     \addlegendimage{purple,mark=square,dotted, line cap=round,mark options={scale=1.2,solid}}
     \addlegendentry{Java Default};
     \addlegendimage{purple,mark=diamond*,dotted, line cap=round,mark options={scale=1.2,solid}}
-    \addlegendentry{Java Json};
+    \addlegendentry{Java JSON};
     \addlegendimage{purple,mark=diamond,dotted, line cap=round,mark options={scale=1.2,solid}}
-    \addlegendentry{Java Bson};     
+    \addlegendentry{Java BSON};     
     \addlegendimage{purple,mark=o,dotted, line cap=round,mark options={scale=1.2,solid}}
-    \addlegendentry{Java Json+Gzip};
+    \addlegendentry{Java JSON+Gzip};
     \addlegendimage{purple,mark=square*,dotted, line cap=round,mark options={scale=1.2,solid}}
     \addlegendentry{Java ProtoBuf};
     \addlegendimage{purple,mark=triangle*,dotted, line cap=round,mark options={scale=1.2,solid}}
