--- a/Experiments/plot/figures/Exp2_rand_read_single_tstrue.tex
+++ b/Experiments/plot/figures/Exp2_rand_read_single_tstrue.tex
@@ -86,26 +86,28 @@
             enlarge x limits=0.03,
             ytick={3,5,10,15,20,30,40,60,80},
             yticklabels={0,5,10,15,20,30,40,60,80},
-            enlarge y limits={0.1,upper},	
-            ylabel={Execution Time[min]},
+            enlarge y limits={0.05,upper},	
+            ylabel={Execution Time [min]},
             xlabel={$\#$ Read Objects},
             xtick pos=left,
             ytick pos=left,
             ytick align=outside,
             xtick align=outside,
-            yticklabel style = {font=\Large},
-            ylabel style = {font=\Large},
-            xticklabel style = {font=\Large},
+            yticklabel style = {font=\LARGE},
+            ylabel style = {font=\LARGE},
+            xticklabel style = {font=\LARGE},
             xtick=data,
             xtick={2000000,4000000,6000000,8000000,10000000},
             xticklabels={2M,4M,6M,8M,10M},        
-            xlabel style = {font=\Large, yshift=-7pt},
-            height=1.1\columnwidth,
+            xlabel style = {font=\LARGE, yshift=-7pt},
+            height=1.3\columnwidth,
             width=0.45\textwidth,
             grid=both,
             grid style=dotted,
             minor grid style={gray!50},
             every axis plot/.append style={line width=0.7pt},
+            ylabel style = { yshift=2pt},
+            xlabel style = { yshift=-15pt},
         ]
         \addDiagramExpThree{}{};
     \end{axis}
