--- a/Experiments/plotting/figures/Exp1_write_parallel.tex
+++ b/Experiments/plotting/figures/Exp1_write_parallel.tex
@@ -23,7 +23,7 @@
 		   check for zeronan/.code={
 			   \pgfkeys{/pgf/fpu=true}
 			   \showvalue{\xbaseline}{HandcodedCPP}{inPlaceCPP}{FlatBufCPP}{ProtoBufCPP}{}{MessagePackRust}{JsonRust}{FlexBufRust}{BsonRust};
-			   \showvalue{\xbaseline}{BincodeRust}{BsonRust}{BsonJava}{DefaultJava}{}{FlatBufJava}{ByteBufferJava}{}{}
+			   \showvalue{\xbaseline}{BincodeRust}{BsonRust}{BsonJava}{DefaultJava}{}{FlatBufJava}{ByteBufferJava}{BoostBinaryCPP}{}
 			   \pgfkeys{/pgf/fpu=false}
 		   },
 		   check for zeronan,
@@ -55,8 +55,8 @@
 		#7
 		]
 		\resetstackedplots	
-		\myaddplot{0}{#2}{IO}{#2}{none}{I/O Time(taskset True)}{#1};
-  		\myaddplotnan{0}{#2!25}{CPU}{#2!25}{north east lines}{CPU Time(taskset True)}{#1}{#2};
+		\myaddplot{0}{#2}{IO}{black}{none}{I/O Time(taskset True)}{#1};
+  		\myaddplotnan{0}{tugb}{CPU}{black}{north east lines}{CPU Time(taskset True)}{#1}{black};
 		\myaddplots{0}{white}{Total}{none}{#1};
    };     
 
@@ -143,7 +143,7 @@
 		ymax=1000,		
 		scaled y ticks=false,		  
 		enlarge y limits={0.35,upper},		
-		ylabel={Execution Time [s]},		   
+		ylabel={Execution Time [sec.]},		   
 		ytick align=inside,
 		xtick align=outside,			
 		xtick pos=left,
@@ -153,7 +153,8 @@
 		xticklabel style = {font=\footnotesize, rotate=50, anchor=east, xshift=1pt, yshift=-1pt},
 		x label style={yshift=-20pt},
 		xtick=data,
-		height=0.7\columnwidth,  
+		height=0.4\columnwidth,  
+		width=\textwidth,  
 		symbolic x coords={ HandcodedCPP, inPlaceCPP, ProtoBufCPP, FlatBufCPP, BoostBinaryCPP, BoostCPP, BsonCPP, MessagePackRust,BincodeRust, JsonRust, FlexBufRust, BsonRust,ByteBufferJava,KryoJava,ProtoBufJava,FlatBufJava,DefaultJava,BsonJava,JsonJava, Json+GzipJava},		   
 		xticklabels={HandCoded, InPlace, ProtoBuf, FlatBuf, BoostBinary, BoostText, BSON, MessagePack,Bincode, JSON, FlexBuf, BSON,ByteBuffer,Kryo,ProtoBuf,FlatBuf,Default,BSON,JSON, JSON+Gzip},  		   
 		point meta=rawy,            
@@ -165,13 +166,13 @@
 		legend image code/.code={\draw [#1] (0cm,-0.1cm) rectangle (0.20cm,0.20cm); },
 		xticklabel style={name=T\ticknum}			
 ]
-\addDiagramExpOne{CPP}{black}{white}{0.26\textwidth}{{10,100,1000}}{{10,100,1000}}{{enlarge x limits=0.15,}};	
+\addDiagramExpOne{CPP}{tug}{white}{0.27\textwidth}{{10,100,1000}}{{10,100,1000}}{{enlarge x limits=0.15,}};	
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.17\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
 
-\addDiagramExpOne{Rust}{black}{color7}{0.21\textwidth}{}{{10,100,1000}}{{enlarge x limits=0.18,}};
+\addDiagramExpOne{Rust}{tug}{color7}{0.215\textwidth}{}{{10,100,1000}}{{enlarge x limits=0.18,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
 
-\addDiagramExpOne{Java}{black}{color7}{0.29\textwidth}{}{{10,100,1000}}{{enlarge x limits=0.10,}};
+\addDiagramExpOne{Java}{tug}{color7}{0.29\textwidth}{}{{10,100,1000}}{{enlarge x limits=0.10,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.2\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Java};
 
 
