--- a/Experiments/plotting/exp_2.tex
+++ b/Experiments/plotting/exp_2.tex
@@ -19,61 +19,61 @@
         \caption{Experiment2: Random Read times for 10M Tweet Objects (Single)}
 \end{figure*}
 
-% \tikzsetnextfilename{Exp2_seq_read_parallel}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_seq_read_parallel}
-%         \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Parallel)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_seq_read_parallel}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_parallel}
+        \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Parallel)}
+\end{figure*}
 
-% \tikzsetnextfilename{Exp2_rand_read_parallel}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_rand_read_parallel}
-%         \caption{Experiment2: Random Read times for 10M Tweet Objects (Parallel)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_rand_read_parallel}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_parallel}
+        \caption{Experiment2: Random Read times for 10M Tweet Objects (Parallel)}
+\end{figure*}
 
-% \tikzsetnextfilename{Exp2_seq_read_single_tstrue}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_seq_read_single_tstrue}
-%         \caption{Experiment2:Taskset = True (Single)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_seq_read_single_tstrue}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_single_tstrue}
+        \caption{Experiment2:Taskset = True (Single)}
+\end{figure*}
 
-% \tikzsetnextfilename{Exp2_seq_read_single_tsfalse}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_seq_read_single_tsfalse}
-%         \caption{Experiment2:Taskset = False (Single)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_seq_read_single_tsfalse}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_single_tsfalse}
+        \caption{Experiment2:Taskset = False (Single)}
+\end{figure*}
 
-% \tikzsetnextfilename{Exp2_rand_read_single_tstrue}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_rand_read_single_tstrue}
-%         \caption{Experiment2:Random Taskset = True (Single)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_rand_read_single_tstrue}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_single_tstrue}
+        \caption{Experiment2:Random Taskset = True (Single)}
+\end{figure*}
 
-% \tikzsetnextfilename{Exp2_rand_read_single_tsfalse}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_rand_read_single_tsfalse}
-%         \caption{Experiment2:Random Taskset = False (Single)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_rand_read_single_tsfalse}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_single_tsfalse}
+        \caption{Experiment2:Random Taskset = False (Single)}
+\end{figure*}
 
-% \tikzsetnextfilename{Exp2_seq_read_parallel_all}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_seq_read_parallel_all}
-%         \caption{Experiment2:Seq (Parallel)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_seq_read_parallel_all}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_parallel_all}
+        \caption{Experiment2:Seq (Parallel)}
+\end{figure*}
 
-% \tikzsetnextfilename{Exp2_rand_read_parallel_all}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_rand_read_parallel_all}
-%         \caption{Experiment2:Random (Parallel)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_rand_read_parallel_all}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_parallel_all}
+        \caption{Experiment2:Random (Parallel)}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp2_legend_single}
 %     \begin{figure*}[h]
@@ -111,13 +111,6 @@
 %         \caption{Experiment6: (Read Memory)}
 % \end{figure*}
 
-
-% \bibliographystyle{elsarticle-num} 
 \bibliographystyle{cas-model2-names} 
 \bibliography{References}
-
-% \input{8_biography}
-%\newpage
-% \input{7_appendix}
-
 \end{document}
