--- a/Experiments/plotting/figures/Exp1_write_parallel.tex
+++ b/Experiments/plotting/figures/Exp1_write_parallel.tex
@@ -56,7 +56,7 @@
 		]
 		\resetstackedplots	
 		\myaddplot{0}{#2}{IO}{black}{none}{I/O Time(taskset True)}{#1};
-  		\myaddplotnan{0}{colorb}{CPU}{black}{north east lines}{CPU Time(taskset True)}{#1}{black};
+  		\myaddplotnan{0}{colord}{CPU}{black}{north east lines}{CPU Time(taskset True)}{#1}{black};
 		\myaddplots{0}{white}{Total}{none}{#1};
    };     
 
