--- a/Experiments/plotting/figures/Exp2_rand_read_parallel.tex
+++ b/Experiments/plotting/figures/Exp2_rand_read_parallel.tex
@@ -179,13 +179,13 @@
 		legend image code/.code={\draw [#1] (-0.2cm,-0.1cm) rectangle (0.20cm,0.20cm); },
 		xticklabel style={name=T\ticknum}			
 ]
-\addDiagramExpOne{CPP}{colora}{colorb}{0.27\textwidth}{{2,3,5,10,20,30,50}}{{2,3,5,10,20,30,50}}{{enlarge x limits=0.15,}};	
+\addDiagramExpOne{CPP}{colora}{colord}{0.27\textwidth}{{2,3,5,10,20,30,50}}{{2,3,5,10,20,30,50}}{{enlarge x limits=0.15,}};	
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.17\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
 
-\addDiagramExpOne{Rust}{colora}{colorb}{0.22\textwidth}{}{}{{enlarge x limits=0.18,}};
+\addDiagramExpOne{Rust}{colora}{colord}{0.22\textwidth}{}{}{{enlarge x limits=0.18,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
 
-\addDiagramExpOne{Java}{colora}{colorb}{0.30\textwidth}{}{}{{enlarge x limits=0.14,}};
+\addDiagramExpOne{Java}{colora}{colord}{0.30\textwidth}{}{}{{enlarge x limits=0.14,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.2\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Java};
 
 
