--- a/Experiments/plotting/setting_main.tex
+++ b/Experiments/plotting/setting_main.tex
@@ -72,10 +72,15 @@
 \definecolor{color7}{RGB}{31,119,180}
 \definecolor{color8}{RGB}{7,77,125}
 
-\definecolor{colora}{RGB}{0,63,92}
-\definecolor{colorb}{RGB}{148,190,217}
-\definecolor{colorc}{RGB}{88,80,141}
-\definecolor{colord}{RGB}{218,210,248}
+% \definecolor{colora}{RGB}{0,63,92}
+% \definecolor{colorb}{RGB}{148,190,217}
+% \definecolor{colorc}{RGB}{88,80,141}
+% \definecolor{colord}{RGB}{218,210,248}
+
+\definecolor{colora}{RGB}{0,0,0}
+\definecolor{colorb}{RGB}{255,255,255}
+\definecolor{colorc}{RGB}{90,90,90}
+\definecolor{colord}{RGB}{230,230,230}
 
 \def\ConvColor{rgb:yellow,5;red,2.5;white,5}
 \def\ConvReluColor{rgb:yellow,5;red,5;white,5}
