--- a/Experiments/plotting/setting_content.tex
+++ b/Experiments/plotting/setting_content.tex
@@ -1,6 +1,16 @@
+\begin{frontmatter}
 
-\title{How Object Model and Its Implementation Impact Performance of Big Data Systems: A Controlled Experimental Study}
-
-\let\WriteBookmarks\relax
-\def\floatpagepagefraction{1}
-\def\textpagefraction{.001}
+    \title{How Object Model and Its Implementation Impact Performance of Big Data Systems: A Controlled Experimental Study}
+    
+    \author[1]{Saeed Fathollahzadeh\corref{cor1}}%
+    \ead{s.fathollahzadeh@gmail.com}
+    
+    \cortext[cor1]{Corresponding author}
+    
+    \affiliation[1]{organization={Concordia University},
+                %addressline={},
+                city={Montreal},
+                %postcode={},
+                state={QC},
+                country={Canada}}   
+\end{frontmatter}
