Update Read Experiments Based on New IS Format

--- a/Experiments/plotting/exp_2_legend.tex
+++ b/Experiments/plotting/exp_2_legend.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,fleqn]{cas-dc}
+\documentclass[preprint,3p,12pt]{elsarticle}
 \input{setting_main.tex}
 \pgfplotsset{compat=1.9}
 %\pgfplotsset{compat=1.12}
